--- a/style.css
+++ b/style.css
@@ -13,8 +13,25 @@ body {
 h1.logo{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.3em;
+    float: left;
 }
 
 span.market{ 
     color: green;
+}
+
+header nav {
+    float: right;
+}
+
+header nav h2 {
+    text-indent: -10000px;
+    height: 0;
+    margin: 0;
+}
+
+header nav li {
+    float: left;
+    list-style-type: none;
+    margin: 10px 20px;
 }
