--- a/style.css
+++ b/style.css
@@ -35,3 +35,69 @@ header nav li {
     list-style-type: none;
     margin: 10px 20px;
 }
+
+header nav li a {
+    text-decoration: none;
+    color: #8B6;
+    font-size: 1.05em;
+}
+header nav li a:hover {
+    text-decoration: none;
+    color: #69970c;
+}
+
+#main-banner, #main-banner img {
+    width: 100%;
+}
+
+#main-banner {
+    position: relative;
+}
+
+#inner-content {
+    position: absolute;
+    min-width: 80%;
+    text-align: center;
+    top: 25%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
+}
+
+#inner-content h4{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2vw;
+}
+
+#inner-content h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 3.5vw;
+}
+
+#main-banner label {
+    font-size: 1vw;
+    display: block;
+}
+
+#main-banner input {
+    width: 70vw;
+    height: 3vh;
+    margin: 5px auto;
+    display: block;
+    font-size: 2vw;
+}
+
+#main-banner button {
+    margin-top: 10px;
+    width: 40vw;
+    height: 2.5vh;
+    background-color: #69970c;
+    transition: .5s ease;
+}
+
+#main-banner button:hover {
+    width: 40vw;
+    height: 2.7vh;
+    background-color: #8B6;
+
+}
