--- a/style.css
+++ b/style.css
@@ -48,34 +48,50 @@ header nav li a:hover {
 
 #main-banner, #main-banner img {
     width: 100%;
+
 }
 
 #main-banner {
     position: relative;
+    clear: both;
 }
 
 #inner-content {
     position: absolute;
     min-width: 80%;
     text-align: center;
-    top: 25%;
+    top: 5%;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
 }
 
 #inner-content h4{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 2vw;
+    color: #000;
+    font-size: calc(18px + 4 * (100vw - 400px)/ 400);
+    font-weight: 500;
+    letter-spacing: .3em;
+    text-shadow: 2px 2px #fff;
+    line-height: 1.5;
+    display: inline-block;
+    margin-bottom: 1rem;
+
 }
 
 #inner-content h3{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3.5vw;
+    color: #000;
+    font-size: calc(35px + 13.5 * (100vw - 400px)/ 400);
+    font-weight: 500;
+    display: inline-block;
+    line-height: 1;
+    text-shadow: 2px 2px #fff;
 }
 
 #main-banner label {
     font-size: 1vw;
+    width: 70vw;
+    margin: auto;
+    text-align: left;
     display: block;
 }
 
@@ -88,16 +104,21 @@ header nav li a:hover {
 }
 
 #main-banner button {
+    position: relative;
     margin-top: 10px;
     width: 40vw;
     height: 2.5vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1em;
+    color: #FFF;
+    font-weight: 900;
+    font-stretch: expanded;
     background-color: #69970c;
-    transition: .5s ease;
+    transition: 1s ease;
 }
 
 #main-banner button:hover {
-    width: 40vw;
-    height: 2.7vh;
     background-color: #8B6;
+    transform: translateY(-3px)
 
 }
