--- a/style.css
+++ b/style.css
@@ -67,11 +67,12 @@ header nav li a:hover {
 }
 
 #inner-content h4{
-    color: #000;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
     font-size: calc(18px + 4 * (100vw - 400px)/ 400);
     font-weight: 500;
     letter-spacing: .3em;
-    text-shadow: 2px 2px #fff;
+    text-shadow: 2px 2px #000;
     line-height: 1.5;
     display: inline-block;
     margin-bottom: 1rem;
@@ -79,12 +80,13 @@ header nav li a:hover {
 }
 
 #inner-content h3{
-    color: #000;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
     font-size: calc(35px + 13.5 * (100vw - 400px)/ 400);
     font-weight: 500;
     display: inline-block;
     line-height: 1;
-    text-shadow: 2px 2px #fff;
+    text-shadow: 2px 2px #000;
 }
 
 #main-banner label {
