--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: georgia;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .wrapper {
@@ -58,7 +59,7 @@ header nav li a:hover {
 
 #inner-content {
     position: absolute;
-    min-width: 80%;
+    min-width: 90%;
     text-align: center;
     top: 5%;
     left: 50%;
@@ -75,7 +76,7 @@ header nav li a:hover {
     text-shadow: 2px 2px #000;
     line-height: 1.5;
     display: inline-block;
-    margin-bottom: 1rem;
+    margin: 1rem auto;
 
 }
 
@@ -87,19 +88,21 @@ header nav li a:hover {
     display: inline-block;
     line-height: 1;
     text-shadow: 2px 2px #000;
+    margin: 1rem auto;
 }
 
 #main-banner label {
-    font-size: 1vw;
-    width: 70vw;
+    font-size: .8vw;
+    color: #fff;
+    width: 50%;
     margin: auto;
     text-align: left;
     display: block;
 }
 
 #main-banner input {
-    width: 70vw;
-    height: 3vh;
+    width: 50%;
+    height: 30%;
     margin: 5px auto;
     display: block;
     font-size: 2vw;
@@ -108,10 +111,10 @@ header nav li a:hover {
 #main-banner button {
     position: relative;
     margin-top: 10px;
-    width: 40vw;
-    height: 2.5vh;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 1em;
+    width: 40%;
+    height: 15%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
     color: #FFF;
     font-weight: 900;
     font-stretch: expanded;
