--- a/style.css
+++ b/style.css
@@ -11,41 +11,155 @@ body {
     margin: 0 auto;
 }
 
-h1.logo{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.3em;
-    float: left;
+
+a {
+  color: #8BA;
+}
+
+/* BEGIN HEADER */
+
+.header {
+  background-color: #fff;
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+}
+
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.header li a {
+  display: block;
+  padding: 20px 20px;
+  border-right: 1px solid #f4f4f4;
+  text-decoration: none;
+}
+
+.header li a:hover,
+.header .menu-btn:hover {
+  background-color: #f4f4f4;
+  color: #000
+}
+
+.header .logo {
+  display: block;
+  float: left;
+
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+a.logo {
+  font-size: 1.3em;
+  font-weight: bold;
+  color: #000
+}
+/* MENU */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
 }
 
 span.market{ 
     color: green;
 }
 
-header nav {
-    float: right;
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
 }
 
-header nav h2 {
-    text-indent: -10000px;
-    height: 0;
-    margin: 0;
+.header .menu-icon .navicon:before {
+  top: 5px;
 }
 
-header nav li {
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* 48em = 768px */
+
+@media (min-width: 48em) {
+  .header li {
     float: left;
-    list-style-type: none;
-    margin: 10px 20px;
+  }
+  .header li a {
+    padding: 20px 30px;
+  }
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+  .header .menu-icon {
+    display: none;
+  }
 }
 
-header nav li a {
-    text-decoration: none;
-    color: #8B6;
-    font-size: 1.05em;
-}
-header nav li a:hover {
-    text-decoration: none;
-    color: #69970c;
-}
+/* END HEADER */
 
 #main-banner, #main-banner img {
     width: 100%;
@@ -61,7 +175,7 @@ header nav li a:hover {
     position: absolute;
     min-width: 90%;
     text-align: center;
-    top: 5%;
+    top: 12%;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
