bootstrapped the nav and the banner

--- a/style.css
+++ b/style.css
@@ -1,6 +1,30 @@
-.jumbotronImage{
+.success  {
+    background-color: green;
+}
+
+.btn-success {
+    background-color: green;
+    border: none;
+}
+
+.btn {
+    transition: color .45s ease,background-color .45s ease,border-color .45s ease,box-shadow .45s ease, transform .45s ease;
+
+
+}
+
+.btn:hover {
+transform: translateY(-10px);
+}
+
+.jumbotronImage {
     width: 100%;
-    min-height: 400px;
+    min-height: 590px;
+
+}
+
+#main-banner{
+        overflow: hidden;
 }
 
 #inner-content {
@@ -8,5 +32,32 @@
     top: 15%;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
+    
+}
+
+.navbar-brand {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+    font-weight: 600;
+}
+
+.navbar-brand span{
+    color: green !important;
+}
+
+#inner-content {
+    width: 90%;
+}
+
+#inner-content h4, h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
+    text-shadow: 2px 2px #000;
+}
+
+#get-quote-banner{
+    width: 40%;
+    font-size:1.3em;
+    font-stretch: ultra-expanded;
+    font-weight: 800;
 }
