--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 
 
 
-
 /* BEGIN NAVBAR CUSTOMIZE */
 .offscreen {
     text-indent: -1000000px;
@@ -34,7 +33,6 @@
 }
 
 /* END NAVBAR CUSTOMIZE */
-
 
 
 
@@ -51,13 +49,13 @@
 
 .jumbotronImage {
     width: 100%;
-    min-height: 590px;
+    min-height: 50vh;
 }
 
 #inner-content {
     color: #fff;
     width: 90%;
-    top: 15%;
+    top: 5%;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -67,16 +65,16 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #fff;
     text-shadow: 2px 2px #000;
-    font-size: 4vw;
+    font-size: 4.5vw;
 }
 
 #inner-content h3 { 
-    font-size: 6vw;
+    font-size: 7vw;
 }
 
 #get-quote-banner{
-    width: 40%;
-    font-size:1.3em;
+    width: 50vw;
+    font-size:4.3vw;
     font-stretch: ultra-expanded;
     font-weight: 800;
 }
@@ -130,15 +128,13 @@ background-color: #c3ecc3;
     font-size: 7vw;
     color: #fff;
     text-shadow: 2px 2px #000;
-    font-size: 9vw;
+    font-size: 10vw;
     text-transform: uppercase;
 }
 
 .service-card{
     border-bottom: 3px solid green;
+
 }
 
 
-.card-title {
-    font-size: 3.0vw;
-}
