--- a/style.css
+++ b/style.css
@@ -220,15 +220,8 @@ background-color: #c3ecc3;
 
 /* END QUOTE OR COMPANY */
 
-
-
 .service-gradient{
-    background: #148d14; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #d3d3d3 0%, #c9cfc9 17%, #abe7ab 33%, #74d876 67%, #24b626 83%, #008000 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg,  #d3d3d3 0%,#c9cfc9 17%,#abe7ab 33%,#74d876 67%,#24b626 83%,#008000 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg,  #d3d3d3 0%,#c9cfc9 17%,#abe7ab 33%,#74d876 67%,#24b626 83%,#008000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebf1eb', endColorstr='#92da93',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
+    background: linear-gradient(139deg,#7a73ae 1%,#41bf47 50%),linear-gradient(#4bb658,#4bb658);
 }
 .services-display{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -237,7 +230,6 @@ background-color: #c3ecc3;
     text-shadow: 2px 1px 5px #000;
     text-transform: uppercase;
 }
-
 
 /* SERVICE CARDS */
 #first-pattern{
